--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,8 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
-    "rootDir": "./src"
+    "noEmit": false
   },
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts","jest.setup.ts"]
+  "exclude": ["node_modules", "test", "dist", "**/*spec.ts", "jest.setup.ts"]
 }
