--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
     "allowSyntheticDefaultImports": true,
     "target": "ES2021",
     "sourceMap": true,
-    "rootDir": "./",
     "outDir": "./dist",
     "baseUrl": "./src",
+    "rootDir": "./src",
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -18,5 +18,7 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "include": ["src/**/*"],   
+  "exclude": ["node_modules", "dist", "test", "jest.setup.ts"]
 }
