add docker files

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-DATABASE_URL="YOUR DB"
-PORT = "PORT"
+DATABASE_URL="postgresql://admin:admin@db_tms/db_tms?schema=public"
+PORT = "3000"
 
-JWT_KEY = "YOUR KEY"
+
+POSTGRES_DB=ruk
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
 
