add docker files

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://admin:admin@db_tms/db_tms?schema=public"
+DATABASE_URL="postgresql://admin:admin@db_ruk/db_ruk?schema=public"
 PORT = "3000"
 
 
